--- a/css/styles.css
+++ b/css/styles.css
@@ -25,10 +25,13 @@ img {
     /* colors */
     --hue: 159;
     /*HSL color mode*/
-    --base-color: hsl(var(--hue)36% 57%);
-    --base-color-second: hsl(var(--hue), 65%, 88%);
+    /*--base-color: hsl(var(--hue)36% 57%);*/
+    --base-color: #B29687;
+    /*--base-color-second: hsl(var(--hue), 65%, 88%);*/
+    --base-color-second: #B29687;
     --base-color-alt: hsl(var(--hue)57% 53%);
-    --title-color: hsl(var(--hue)41% 10%);
+    /*--title-color: hsl(var(--hue)41% 10%);*/
+    --title-color:#212832;
     --text-color: hsl(0 0% 46%);
     --text-color-light: hsl(0 0% 98%);
     --body-color: hsl(0 0% 98%);
